lab1/Test/L1-A-7-61.cmm
struct {
  float CrfhsX1ZXb0b_iU [ 1541773607 ] = b6ICA0oM7fn 
    = VmE > C2c1qQ_6SM86PyK5w8 - zuAO7QeXeo / ( ICxqgM4JS1C3MUyolq 
    || DNqKNLXu3od7ipzg && kR02B != FxM + CVjf2bVGFIlkEKpc 
    * - ! uTMjjfNk0BA_b ( llGI , R68egmFdi || FwLHMjjplnpJfajuPIj4 
    * ! dxaSb [ Zw >= _vi61S + LsbBTMW9e * Xu9FEGyDp9_Md0dwvW 
    < 1465386092 == - 1663264070.1192109781 ] <= p__PQ5DO2A1BmH4U 
    ( ) ) ) . cgF9afETuVRIg9mNIsW ;
}l5ZWB_oRQo_T0o ( ) {
}
int B2SZImTdE , R 

;
struct lcxRfmA ;
struct W5AG7RKuQ ;
int I 
;
int ;
int ;
struct d5rmQjhxRn_0c5b ;
int ;
struct qfZm3_pzOPlo6FMEQaJx {
  int RBnEk , _oMYXOJspfANc ;
};
struct ie3JNieWk928P DHeNW2V 
;
int ;
int ;
int ;
int fAoMxm1 ( int cBUa7NLGowQBUEKRNN2 ) {
  tRG2j0inkRNl ;
  if ( kJytDNqw82Hl0_93v )   return eyzGuee ;

}
int ;
int ;
int TGkb6BM5OF7GuK ( ) {
}
int Dct3wm ( int PgUdO2FzpDF3mW7nOK , int _HSafG324PLBWq4Q 
  :) {
}
int ;
int UkP4rkXZNiHbepJGZPp ( ) {
  if ( Opv )   while ( fMhKlXZThA ) {
    o_vhg43dCqz83Ts8 ;
    e9LRJDnhp5gX3qc7dL ;
    kaXksNZ1a ;
    if ( KTpbbeATyNo )     m2x2hoc ;
else     if ( FaITbvDfDHtg )     FKg ;

~
  }
else   while ( zdTHXOYW9sFjda3t ) {
    YK0sj8D9 ;
  }

}
int umWHCICc3mq ( ) {
%  iRTp ;
  if ( beDWO1qnyj )   T5jeip ;
else   K2ypZI32ayT ;

  if ( JcQSgD )   MYAOo0O ;
else   while ( BFHCezv36ll9zBpx ) {
{
    }    E8iG ;
  }

}
